# remote-job-app

./: GEMINI.md  Procfile  README.md  app.py  inspect_job.py  jobs.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: test_main.py
